--- a/play.html
+++ b/play.html
@@ -15,6 +15,12 @@
     <p><strong>HAMLET:</strong> To be, or not to be: that is the question...</p>
     <p><strong>OPHELIA:</strong> My lord, I have remembrances of yours...</p>
 
+    <h4 class="name">HAMLET</h4>
+    <p class=""speech">To be, or not to be: that is the question...</p>
+    <p class="stage-direction">(He paces back and forth.)</p>
+
+    
+
     
 </body>
 </html>
