--- a/play.html
+++ b/play.html
@@ -16,10 +16,10 @@
     <p><strong>OPHELIA:</strong> My lord, I have remembrances of yours...</p>
 
     <h4 class="name">HAMLET</h4>
-    <p class=""speech">To be, or not to be: that is the question...</p>
+    <p class="speech">To be, or not to be: that is the question...</p>
     <p class="stage-direction">(He paces back and forth.)</p>
 
-    
+    <link rel="stylesheet" href="shakespeare.css">
 
     
 </body>
