--- a/play.html
+++ b/play.html
@@ -21,6 +21,30 @@
 
     <link rel="stylesheet" href="shakespeare.css">
 
+    <table class="cast">
+        <tr>
+            <th>Character</th>
+            <th>Actor</th>
+            <th>Offer</th>
+        </tr>
+        <tr>
+            <td>Hamlet</td>
+            <td>Benedict Cumberbatch</td>
+            <td>$2,000,000</td>
+        </tr>
+        <tr>
+            <td>Ophelia</td>
+            <td>Florence Pugh</td>
+            <td>$1,500,000</td>
+        </tr>
+        <tr>
+            <td>Horatio</td>
+            <td>Tom Hiddleston</td>
+            <td>$1,500,000</td>
+        </tr>
+    </table>
+    
+
     
 </body>
 </html>
