--- a/play2.html
+++ b/play2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Shakespeare Play</title>
+    <title>And the Play Continues</title>
 </head>
 <body>
     <h1>Preston Hesson Presents</h1>
@@ -44,7 +44,9 @@
         </tr>
     </table>
 
-    <a href="play2.html">Continue to next scene</a>
+    <a href="play.html">Go back to first scene</a>
+
+
     
 
 
